[gd_scene load_steps=10 format=3 uid="uid://dekyhx6dt2vf"]

[ext_resource type="Script" path="res://Scripts/startScreenManager.gd" id="1_t5kxh"]
[ext_resource type="Texture2D" uid="uid://bkhnqpc12x0gm" path="res://Textures/ekranstartowy1.png" id="2_cyd3u"]
[ext_resource type="Texture2D" uid="uid://cj7h63jrxqtxv" path="res://Textures/buttonstartowy.png" id="3_3yyha"]
[ext_resource type="FontFile" uid="uid://kc4j5ea027jm" path="res://TIMESBD.TTF" id="3_v3luv"]

[sub_resource type="LabelSettings" id="LabelSettings_den0i"]
font = ExtResource("3_v3luv")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_5qyfk"]
font = ExtResource("3_v3luv")
font_size = 32
font_color = Color(0.282353, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4x8dd"]
font = ExtResource("3_v3luv")
font_size = 32
font_color = Color(0.282353, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_j67xt"]
font = ExtResource("3_v3luv")
font_size = 32
font_color = Color(0.282353, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nwd16"]
font = ExtResource("3_v3luv")
font_size = 32
font_color = Color(0.282353, 0, 0, 1)

[node name="StartScene" type="Node2D"]

[node name="StartingScreen" type="Node2D" parent="."]
script = ExtResource("1_t5kxh")

[node name="BackgroundStartingScreen" type="Sprite2D" parent="StartingScreen"]
position = Vector2(640, 360)
texture = ExtResource("2_cyd3u")

[node name="TitleStartingScreen" type="Label" parent="StartingScreen"]
offset_top = 64.0
offset_right = 779.0
offset_bottom = 122.0
scale = Vector2(1.64458, 1.66507)
text = "Ostatni Zachód"
label_settings = SubResource("LabelSettings_den0i")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="StartGameButton" type="TextureButton" parent="StartingScreen"]
offset_left = 544.0
offset_top = 192.0
offset_right = 744.0
offset_bottom = 247.0
texture_normal = ExtResource("3_3yyha")
ignore_texture_size = true
stretch_mode = 0

[node name="StartButtonText" type="Label" parent="StartingScreen/StartGameButton"]
layout_mode = 0
offset_left = 30.0
offset_top = 12.0
offset_right = 174.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 24
text = "Start"
label_settings = SubResource("LabelSettings_5qyfk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreButton" type="TextureButton" parent="StartingScreen"]
offset_left = 544.0
offset_top = 320.0
offset_right = 744.0
offset_bottom = 375.0
texture_normal = ExtResource("3_3yyha")
ignore_texture_size = true
stretch_mode = 0

[node name="ScoreButtonText" type="Label" parent="StartingScreen"]
offset_left = 574.0
offset_top = 332.0
offset_right = 718.0
offset_bottom = 366.0
theme_override_font_sizes/font_size = 24
text = "Wyniki"
label_settings = SubResource("LabelSettings_4x8dd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="TextureButton" parent="StartingScreen"]
offset_left = 544.0
offset_top = 448.0
offset_right = 744.0
offset_bottom = 503.0
texture_normal = ExtResource("3_3yyha")
ignore_texture_size = true
stretch_mode = 0

[node name="OptionsButtonText" type="Label" parent="StartingScreen/OptionsButton"]
layout_mode = 0
offset_left = 26.0
offset_top = 11.0
offset_right = 177.0
offset_bottom = 47.0
theme_override_font_sizes/font_size = 24
text = "Ustawienia"
label_settings = SubResource("LabelSettings_j67xt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="StartingScreen"]
offset_left = 544.0
offset_top = 576.0
offset_right = 744.0
offset_bottom = 631.0
texture_normal = ExtResource("3_3yyha")
ignore_texture_size = true
stretch_mode = 0

[node name="ExitButtonText" type="Label" parent="StartingScreen/ExitButton"]
layout_mode = 0
offset_left = 29.0
offset_top = 12.0
offset_right = 173.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 24
text = "Wyjście"
label_settings = SubResource("LabelSettings_nwd16")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="StartingScreen/StartGameButton" to="StartingScreen" method="_on_start_game_button_down"]
[connection signal="button_down" from="StartingScreen/ScoreButton" to="StartingScreen" method="_on_score_button_down"]
[connection signal="button_down" from="StartingScreen/ExitButton" to="StartingScreen" method="_on_exit_button_down"]
